# rust-counter-cross-contract

./: README.md
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/sim/: main.rs
