[package]
name = "rust-counter-tutorial"
version = "0.2.0"
authors = ["Near Inc <hello@near.org>", "Nikita Kuznetsov <n@8gen.team>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.9"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.9"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
